primera subida heroku0

--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "ion-api",
   "version": "1.0.0",
   "description": "Api ionic app ecudevs",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js",
-    "postinstall": "node server.js"
+    "dev": "nodemon server.js"
   },
   "author": "Thian Lopez Z",
   "license": "ISC",
